--- a/frontend/src/app/parkingAdministration/parkingAdministrationList/parkingAdministrationList.component.scss
+++ b/frontend/src/app/parkingAdministration/parkingAdministrationList/parkingAdministrationList.component.scss
@@ -1,8 +1,8 @@
 mat-card {
   padding: 2px;
-  height: 65px;
+  height: 80px;
 }
 
-mat-nav-list {
-  padding-top: 0px;
+.parking-mat-list-option {
+  height: 80px !important;
 }
