--- a/frontend/src/app/reservation/reservation-add/reservation-add.component.scss
+++ b/frontend/src/app/reservation/reservation-add/reservation-add.component.scss
@@ -3,3 +3,13 @@ mat-card-actions {
   display: flex;
   justify-content: end;
 }
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-buttons {
+  display: flex;
+  justify-content: end;
+}
