--- a/frontend/src/app/account/account.component.html
+++ b/frontend/src/app/account/account.component.html
@@ -4,12 +4,7 @@
 
 <mat-card>
   <mat-nav-list>
-    <a mat-list-item routerLink="/parkingAdministration" routerLinkActive="active">Parkplätze verwalten</a>
-  </mat-nav-list>
-</mat-card>
-<mat-card>
-  <mat-nav-list>
-    <a mat-list-item href="/reservation">Parkplatzrevervationen anzeigen</a>
+    <a mat-list-item routerLink="/parkingAdministration">Parkplätze verwalten</a>
   </mat-nav-list>
 </mat-card>
 <mat-card>
