--- a/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
+++ b/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
@@ -1,8 +1,11 @@
 <app-shared-button-bar>
-  <button mat-mini-fab color="ancent" type="button" mat-button *ngIf="reservation?.id" (click)="deleteReservation(reservation.id)" class="deleteButton"><mat-icon>delete</mat-icon></button>
+  <button mat-mini-fab color="ancent" type="button" mat-button *ngIf="reservation?.id"
+    (click)="deleteReservation(reservation.id)" class="deleteButton">
+    <mat-icon>delete</mat-icon>
+  </button>
 </app-shared-button-bar>
 
-<form [formGroup]="reservationForm" (submit)="onEdit(reservationForm.value)" >
+<form [formGroup]="reservationForm" (submit)="onEdit(reservationForm.value)">
   <mat-card>
     <mat-card-header>
       <mat-card-title *ngIf="reservation?.id">Parkplatz-Reservation bearbeiten</mat-card-title>
@@ -19,31 +22,38 @@
       </mat-datepicker-toggle>
       <ngx-mat-datetime-picker #fromPicker>
       </ngx-mat-datetime-picker>
-      <mat-error *ngIf="f.DateTimeFrom.errors?.dateInPast" class="alert alert-danger">{{f.DateTimeFrom.errors?.dateInPast.value}}</mat-error>
-      <mat-error *ngIf="f.DateTimeFrom.errors?.dateBeforeValidator" class="alert alert-danger"> {{f.DateTimeFrom.errors?.dateBeforeValidator.value}}</mat-error>
+      <mat-error *ngIf="f.DateTimeFrom.errors?.dateInPast" class="alert alert-danger">
+        {{f.DateTimeFrom.errors?.dateInPast.value}}</mat-error>
+      <mat-error *ngIf="f.DateTimeFrom.errors?.dateBeforeValidator" class="alert alert-danger">
+        {{f.DateTimeFrom.errors?.dateBeforeValidator.value}}</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput [ngxMatDatetimePicker]="toPicker" placeholder="bis" formControlName="DateTimeTo" [value]="this.reservation.DateTimeTo">
+      <input matInput [ngxMatDatetimePicker]="toPicker" placeholder="bis" formControlName="DateTimeTo"
+        [value]="this.reservation.DateTimeTo">
       <mat-datepicker-toggle matSuffix [for]="$any(toPicker)">
       </mat-datepicker-toggle>
       <ngx-mat-datetime-picker #toPicker>
       </ngx-mat-datetime-picker>
-      <mat-error *ngIf="f.DateTimeTo.errors?.dateInPast" class="alert alert-danger">{{f.DateTimeTo.errors?.dateInPast.value}}</mat-error>
+      <mat-error *ngIf="f.DateTimeTo.errors?.dateInPast" class="alert alert-danger">
+        {{f.DateTimeTo.errors?.dateInPast.value}}</mat-error>
     </mat-form-field>
+    <br />
     <mat-form-field style="display: none">
       <input matInput placeholder="ID_Parking" formControlName="ID_Parking" />
     </mat-form-field>
     <mat-form-field class="hiddenField">
       <input matInput placeholder="IsCanceled" formControlName="IsCanceled" />
     </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Betrag" formControlName="Amount" [value]="this.reservation.Amount | currency: 'CHF' "/>
-      </mat-form-field>
-      <mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Betrag" formControlName="Amount"
+        [value]="this.reservation.Amount | currency: 'CHF' " />
+    </mat-form-field>
+    <mat-form-field>
       <input matInput placeholder="CHF/h" formControlName="PricePerHour" />
     </mat-form-field>
 
   </mat-card>
-    <app-shared-button-bar-edit [backLink]="'/reservation'" [form]="reservationForm" [object]="reservation" [resetFunction]="resetForm"></app-shared-button-bar-edit>
+  <app-shared-button-bar-edit [backLink]="'/reservation'" [form]="reservationForm" [object]="reservation"
+    [resetFunction]="resetForm"></app-shared-button-bar-edit>
 
 </form>
