--- a/frontend/src/app/reservation/reservation.component.html
+++ b/frontend/src/app/reservation/reservation.component.html
@@ -1,5 +1,7 @@
-<mat-card>
-  <mat-checkbox [checked]="withHistory" (change)="refresh($event.checked)">Vergangene anzeigen</mat-checkbox>
-  <app-reservation-list [reservations]="reservations">
-  </app-reservation-list>
-</mat-card>
+<app-shared-button-bar>
+  <mat-card class="mat-card-button-bar">
+    <mat-checkbox [checked]="withHistory" (change)="refresh($event.checked)" color="primary">Vergangene anzeigen</mat-checkbox>
+  </mat-card>
+</app-shared-button-bar>
+
+<app-reservation-list [reservations]="reservations"></app-reservation-list>
