--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,8 +12,10 @@ $my-app-warn:    mat-palette($mat-deep-orange);
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include angular-material-theme($my-app-theme);
 
-
 html, body { height: 100%; }
+html {
+  overflow-y: scroll;
+}
 body {
   margin: 0;
   background-image: -webkit-image-set(url("assets/parking_bg_1920.webp") 1x, url("assets/parking_bg_1920.webp") 2x);
@@ -46,4 +48,16 @@ body {
 
 .field300 {
   width: 300px;
+}
+
+.mat-list-base .mat-list-item .mat-list-item-content, .mat-list-base .mat-list-option .mat-list-item-content {
+  padding: 8px !important;
+}
+
+.mat-list-text {
+  padding: 0px !important;
+}
+
+.mat-list-base {
+  padding: 0px !important;
 }
