CreateReservation removed and Rounding fixed

--- a/frontend/src/app/reservation/reservation-add/reservation-add.component.html
+++ b/frontend/src/app/reservation/reservation-add/reservation-add.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="reservationForm" (submit)="onAdd(reservationForm.value)">
+<form [formGroup]="reservationForm" (submit)="onAdd()">
   <div class="card-container">
     <div>
       <mat-form-field class="hiddenField">
