--- a/frontend/src/app/reservation/reservation.component.html
+++ b/frontend/src/app/reservation/reservation.component.html
@@ -1,6 +1,6 @@
 <app-shared-button-bar>
   <mat-card class="mat-card-button-bar">
-    <mat-checkbox [checked]="withHistory" (change)="refresh($event.checked)" color="primary">Vergangene anzeigen</mat-checkbox>
+    <mat-checkbox [checked]="withHistory" (change)="refresh()" color="primary">Vergangene anzeigen</mat-checkbox>
   </mat-card>
 </app-shared-button-bar>
 
