--- a/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
+++ b/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
@@ -21,7 +21,9 @@
       </ngx-mat-datetime-picker>
       <mat-error *ngIf="f.DateTimeFrom.errors?.dateInPast" class="alert alert-danger">
         {{f.DateTimeFrom.errors?.dateInPast.value}}</mat-error>
-      <mat-error *ngIf="f.DateTimeFrom.errors?.dateBeforeValidator" class="alert alert-danger">
+      <mat-error *ngIf="f.DateTimeFrom.errors?.existsReservationValidator" class="alert alert-danger">
+          {{f.DateTimeFrom.errors?.existsReservationValidator.value}}</mat-error>
+        <mat-error *ngIf="f.DateTimeFrom.errors?.dateBeforeValidator" class="alert alert-danger">
         {{f.DateTimeFrom.errors?.dateBeforeValidator.value}}</mat-error>
     </mat-form-field>
     <mat-form-field>
