--- a/frontend/src/app/reservation/reservation-item/reservation-item.component.html
+++ b/frontend/src/app/reservation/reservation-item/reservation-item.component.html
@@ -1,5 +1,5 @@
 <mat-list-item routerLink="/reservation/{{ reservation?.id }}" class="reservation-mat-list-item">
-    <div class="mat-list-item-card">
+    <div class="mat-list-item-card" data-cy="select-to-edit">
         <div class="reservation-list-item-image">
             <div mat-card-avatar class="card-title-image"></div>
         </div>
