--- a/frontend/src/app/reservation/reservation-add/reservation-add.component.html
+++ b/frontend/src/app/reservation/reservation-add/reservation-add.component.html
@@ -34,7 +34,7 @@
     </mat-form-field>
   </div>
   <div class="card-buttons">
-    <button type="submit" mat-raised-button color="primary" *ngIf="!reservation?.id"
+    <button type="submit" mat-raised-button data-cy="add-reservation" color="primary" *ngIf="!reservation?.id"
       [disabled]="reservationForm.invalid">{{this.buttonCaption$ | async}}</button>
   </div>
 </form>
