Validierungen auf Add.Form aktiviert.

--- a/frontend/src/app/reservation/reservation-add/reservation-add.component.html
+++ b/frontend/src/app/reservation/reservation-add/reservation-add.component.html
@@ -20,6 +20,8 @@
           {{f.DateTimeFrom.errors?.dateInPast.value}}</mat-error>
         <mat-error *ngIf="f.DateTimeFrom.errors?.dateBeforeValidator" class="alert alert-danger">
           {{f.DateTimeFrom.errors?.dateBeforeValidator.value}}</mat-error>
+        <mat-error *ngIf="f.DateTimeFrom.errors?.existsReservationValidator" class="alert alert-danger">
+          {{f.DateTimeFrom.errors?.existsReservationValidator.value}}</mat-error>
       </mat-form-field>
     </div>
     <mat-form-field>
@@ -31,6 +33,8 @@
       </ngx-mat-datetime-picker>
       <mat-error *ngIf="f.DateTimeTo.errors?.dateInPast" class="alert alert-danger">
         {{f.DateTimeTo.errors?.dateInPast.value}}</mat-error>
+      <mat-error *ngIf="f.DateTimeTo.errors?.existsReservationValidator" class="alert alert-danger">
+        {{f.DateTimeTo.errors?.existsReservationValidator.value}}</mat-error>
     </mat-form-field>
   </div>
   <div class="card-buttons">
